# pubmed2json

./: .gitignore  NOTES.md  README.md  main.py  profile.out  program.prof  pubmed.log.baseline  pyproject.toml  sample.env
archive/: pubmed.py  pubmed_db.py  pubmed_main.py
pm/: arangodb.py  convert.py  db.py  processing.py  settings.py  xml.py
tests/: README.md
